--- a/register.html
+++ b/register.html
@@ -62,7 +62,7 @@
 			<section style="background: white">
 			
 				<p align="center">
-					Already a member? <a href="login.html">Sign in here</a><br><br>
+					Already a member? <a href="index.html">Sign in here</a><br><br>
 				</p>
 				</section>
 		
@@ -91,7 +91,7 @@
 
 					// let's just simulate something...
 					var messageEl = theForm.querySelector( '.final-message' );
-					messageEl.innerHTML = 'Thank you! Check email for .';
+					messageEl.innerHTML = 'Thank you!';
 					classie.addClass( messageEl, 'show' );
 				}
 			} );
