--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
 				<img src="home/img/zimpa.png" width="30%"><br><h1>Zimpa <span>create your zimpa account</span></h1>	
 			</header>
 			<section style="background: white">
-				<form id="theForm" class="simform" autocomplete="off" method="POST" action="http://udara.kd.io:8080/register">
+				<form id="theForm" class="simform" autocomplete="off" method="POST" action="http://udara.kd.io:8080/ZimpaApp/register">
 					<div class="simform-inner">
 						<ol class="questions">
 							<li>
