--- a/register.html
+++ b/register.html
@@ -110,6 +110,7 @@
 						messageEl.innerHTML = 'Thank you!<br><br>Please send the following message to 77100<br><br>\'zimpa activate '+ response.code;						
 					}
 					classie.addClass( messageEl, 'show' );
+					return false;
 				}
 			} );
 		</script>
