--- a/register.html
+++ b/register.html
@@ -106,7 +106,7 @@
 
 					// let's just simulate something...
 					else{					
-						messageEl.innerHTML = 'Thank you!<br><br>Please send the following message to 77100<br><br>\'zimpa activate '+ response.code;						
+						messageEl.innerHTML = 'Thank you!<br><br>Please send the following message to 77100<br><br>\'zimpa activate '+ response.code + ' \'';						
 					}
 					
 					
