--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
 												<h2>Mobile Phones</h2>
 												<a class="mp-back" href="#">back</a>
 												<ul>
-													<li><a href="#">Super Smart Phone</a></li>
+													<li><a href="example.html">Smart Phone</a></li>
 													<li><a href="#">Thin Magic Mobile</a></li>
 													<li><a href="#">Performance Crusher</a></li>
 													<li><a href="#">Futuristic Experience</a></li>
