--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             			// xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
             			// xmlhttp.send(params);
             			
-            			var response = true;
+            			var response = 'true';
             			
             			if (response == 'true'){  
             				document.location = "home.html";
